fix: remove jdk preview features